# codr

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  mypy.ini  pyproject.toml  sqlite.db
alembic/: env.py
alembic/versions/: 62444d7d8fb3_.py  627d7fe71402_.py
codr/: codebase_service.py  entities.py  github_client.py  logger.py  main.py  models.py  repo_client.py  user_service.py  utils.py
codr/api/: routes.py
codr/api/routers/: github.py  users.py
codr/api/schemas/: github.py  users.py
codr/application/: entities.py  exceptions.py  factories.py
codr/application/interactors/codebase/: create_index.py
codr/application/interactors/github/: add_repo.py  authenticate_user.py  create_access_token.py  get_redirect_url.py  refresh_access_token.py
codr/application/interactors/users/: create_user.py  delete_user.py  get_user.py  patch_user.py  update_user.py
codr/common/: utils.py
codr/dependencies/: __init__.py
codr/interactors/github/: create_access_token.py
codr/interactors/users/: create_user.py  get_user.py  update_user.py
codr/llm/: clients.py  documents.py  tools.py
codr/storage/: codebase_storage.py  repo_repository.py  repository.py  storage.py  user_repository.py  user_storage.py  utils.py  vector_db.py
codr/storage/dao/: abstract_dao.py  sql_dao.py
codr/storage/mapper/: base.py  repo.py  user.py  version_control_info.py
tests/: utils.py
tests/api/: users.py
